@@ -1,3 +1,11 @@
+2017-04-13  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Update the comments for the number of bits in RenderStyle::InheritedFlags.
+
+        Rubber-stamped by Zalan Bujtas
+
+        * rendering/style/RenderStyle.h:
+
 2017-04-13  Myles C. Maxfield  <mmaxfield@apple.com>
 
         Addressing post-review comment after r215314.
